[package]
name = "edge-net-bug-mre"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = false

[profile.release.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = false

[profile.dev.package.esp-wifi]
opt-level = 3

[dependencies]
esp-hal = { version = "0.19.0", features = ["async"] }
esp-backtrace = { version = "0.13.0", features = [
  "panic-handler",
  "println",
  "exception-handler",
] }
esp-println = { version = "0.10.0", features = ["log"] }
esp-hal-embassy = { version = "0.2.0" }

embassy-time = { version = "0.3.0" }
embassy-executor = { version = "0.5.0", package = "embassy-executor", features = [
  "nightly",
  "integrated-timers",
] }
embassy-net = { version = "0.4.0", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
] }


esp-wifi = { version = "0.7.1", features = [
  "phy-enable-usb",
  "embedded-svc",
  "wifi-default",
  "async",
  "embassy-net",
] }
smoltcp = { version = "0.11.0", default-features = false, features = [
  "proto-igmp",
  "proto-ipv4",
  "socket-tcp",
  "socket-icmp",
  "socket-udp",
  "medium-ethernet",
  "proto-dhcpv4",
  "socket-raw",
  "socket-dhcpv4",
] }
log = "0.4.16"
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.0" }
heapless = "0.8.0"
critical-section = "1.0.1"
static_cell = { version = "=1.2", features = ["nightly"] }

edge-http = { package = "edge-http", git = "https://github.com/ivmarkov/edge-net/", rev = "640a4f263986d6d26e2508cdb2f43c8ee5a7bd66" }
edge-nal = { package = "edge-nal", git = "https://github.com/ivmarkov/edge-net/", rev = "640a4f263986d6d26e2508cdb2f43c8ee5a7bd66" }
edge-nal-embassy = { package = "edge-nal-embassy", git = "https://github.com/ivmarkov/edge-net/", rev = "640a4f263986d6d26e2508cdb2f43c8ee5a7bd66" }

[features]
esp32 = [
  "esp-hal/esp32",
  "esp-backtrace/esp32",
  "esp-println/esp32",
  "esp-wifi/esp32",
]
esp32c3 = [
  "esp-hal/esp32c3",
  "esp-backtrace/esp32c3",
  "esp-println/esp32c3",
  "esp-wifi/esp32c3",
]
esp32s2 = [
  "esp-hal/esp32s2",
  "esp-backtrace/esp32s2",
  "esp-println/esp32s2",
  "esp-wifi/esp32s2",
]
esp32s3 = [
  "esp-hal/esp32s3",
  "esp-backtrace/esp32s3",
  "esp-println/esp32s3",
  "esp-wifi/esp32s3",
]

# Comment for old behaviour.
[patch."https://github.com/ivmarkov/edge-net/"]
edge-http = { package = "edge-http", git = "https://github.com/ivmarkov//edge-net/", rev = "e846ff7be32e6376f814723ebf9d97534140bdfb"  }
edge-nal = { package = "edge-nal", git = "https://github.com/ivmarkov//edge-net/", rev = "e846ff7be32e6376f814723ebf9d97534140bdfb"  }
edge-nal-embassy = { package = "edge-nal-embassy", git = "https://github.com/ivmarkov//edge-net/", rev = "e846ff7be32e6376f814723ebf9d97534140bdfb" }
